.provarCaches/00D410000011HE0EAM/objects/rstk__icitemssaud__c.object
<CustomObject>
    <description>icitemssaud__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icitemssaud_div__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp;   rstk__icitemssaud_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c &amp; &apos;_&apos; &amp; TEXT(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icitemssaud_action__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Action Taken</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icitemssaud_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Supersedure Change Audits</relationshipLabel>
        <relationshipName>icitemssauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitemssaud_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Supersedure Change Audits</relationshipLabel>
        <relationshipName>icitemssauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitemssaud_newqtyreq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>New Quantity Required</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icitemssaud_ordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icitemssaud_origqtyreq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Original Requisition Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icitemssaud_superitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Supersede With Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Supersedure Change Audits (Supersede With Item)</relationshipLabel>
        <relationshipName>icitemssauds2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Supersedure Change Audit</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supersedure Change Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>